Windows issue problem fixed

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ riderModule.iml
 .idea/.idea.ShareTracking/.idea/encodings.xml
 .idea/.idea.ShareTracking/.idea/indexLayout.xml
 .idea/.idea.ShareTracking/.idea/vcs.xml
+.vs/ShareTracking/v17/.suo
+.vs/ShareTracking/FileContentIndex/d1e3615c-3fc1-4f6c-a483-883bcbcba952.vsidx
+.vs/ShareTracking/FileContentIndex/9bf79634-f590-4416-aa94-09668fdde6f7.vsidx
+.vs/ShareTracking/FileContentIndex/85a4e030-8417-4805-9fa9-232fcc8d8344.vsidx
+.vs/ShareTracking/FileContentIndex/2d69185a-e005-495a-93e8-05477f830ee6.vsidx
