--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,16 @@ riderModule.iml
 .vs/ShareTracking/FileContentIndex/9bf79634-f590-4416-aa94-09668fdde6f7.vsidx
 .vs/ShareTracking/FileContentIndex/85a4e030-8417-4805-9fa9-232fcc8d8344.vsidx
 .vs/ShareTracking/FileContentIndex/2d69185a-e005-495a-93e8-05477f830ee6.vsidx
+.idea/.idea.ShareTracking/.idea/projectSettingsUpdater.xml
+.idea/.idea.ShareTracking/.idea/workspace.xml
+.vs/ShareTracking/FileContentIndex/1861e21a-fc8b-40cc-bbc8-0752c754377e.vsidx
+.vs/ShareTracking/FileContentIndex/38db3666-67ab-48c8-9d91-e63bdb07a097.vsidx
+.vs/ShareTracking/FileContentIndex/3d7b5106-7dc3-4360-9e47-a6a72b57f0a7.vsidx
+.vs/ShareTracking/FileContentIndex/c4aff773-72e7-4bd4-a530-704f1726d3ff.vsidx
+.vs/ShareTracking/v17/.futdcache.v2
+.vs/ShareTracking/FileContentIndex/fde7fbe5-8695-4408-b644-85114cded36f.vsidx
+.vs/ShareTracking/FileContentIndex/21421934-5f91-4b40-ad6b-acd37df10359.vsidx
+.vs/ShareTracking/FileContentIndex/18c6b142-1d25-4c3d-97d6-edeed2e85c45.vsidx
+.vs/ShareTracking/DesignTimeBuild/.dtbcache.v2
+.vs/ProjectEvaluation/sharetracking.projects.v7.bin
+.vs/ProjectEvaluation/sharetracking.metadata.v7.bin
